fixed sidebar overflow bug

--- a/app/assets/stylesheets/_utilities.css.scss
+++ b/app/assets/stylesheets/_utilities.css.scss
@@ -1,10 +1,14 @@
-.row.full-width {
-  min-width: 100%;
-  .columns {
-    padding: 0 emCalc(45px);
+@font-face {
+  font: {
+     family: 'Avenir';
+     weight: 800;
+     style: 'normal';
   }
+  src: asset-url('avenir.eot', font);
+  src: asset-url('avenir.eot', font) format('embedded-opentype'),
+       asset-url('avnir.woff', font) format('woff'),
+       asset-url('avenir.ttf', font) format('truetype')
 }
-
 .cf:before,
 .cf:after {
     content: " "; /* 1 */
@@ -13,21 +17,21 @@
 .cf:after {
     clear: both;
 }
-
-@font-face {
-  font: {
-     family: 'Avenir';
-     weight: 600;
-     style: 'normal';
-  }
-  src: asset-url('avenir.eot', font);
-  src: asset-url('avenir.eot', font) format('embedded-opentype'),
-       asset-url('avnir.woff', font) format('woff'),
-       asset-url('avenir.ttf', font) format('truetype')
-}
 a, a:hover {
   @include transition-property(color);
   @include transition-duration(.65s);
+}
+li {
+  list-style-type: none;
+}
+input:focus {
+  outline: none !important;
+}
+.row.full-width {
+  min-width: 100%;
+  .columns {
+    padding: 0 emCalc(45px);
+  }
 }
 .special-link a {
   position: relative;
@@ -57,12 +61,6 @@ a, a:hover {
   -webkit-transform: translateY(0px);
     -moz-transform: translateY(0px);
     transform: translateY(0px);
-}
-li {
-  list-style-type: none;
-}
-input:focus {
-  outline: none !important;
 }
 
 /****************
