--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -17,8 +17,8 @@
 // We use these to control various global styles
 $body-bg: #f7f7f7;
 $body-font-color: #51443c;
-$body-font-family: 'Avenir', 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
-// $body-font-weight: normal;
+$body-font-family: "Avenir", 'Helvetica Neue', Helvetica, Helvetica, Arial, sans-serif;
+$body-font-weight: 400;
 // $body-font-style: normal;
 
 $base-line-height: 100%;
@@ -88,7 +88,7 @@ $primary-color: #4a4947;
 
 // We use these to control header font styles
 $header-font-family: "Avenir", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-$header-font-weight: 600;
+$header-font-weight: 500;
 // $header-font-style: normal;
 // $header-font-color: #222;
 // $header-line-height: 1.4;
